# vstshill

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/icons/: vstshill_base.icns  vstshill_base_icon.h  vstshill_base_icon_32_png.h  vstshill_base_icon_bmp.h  vstshill_base_icon_png.h
cmake/: format-check.cmake  format.cmake  generate_icons.py
cmake/dependencies/: Dependencies.cmake  FindSDL3.cmake
cmake/modules/: DependencyConfig.cmake  FindSDL3.cmake  PlatformConfig.cmake  TargetConfig.cmake
cmake/options/: PlatformOptions.cmake  ProjectOptions.cmake
cmake/targets/: Core.cmake  Executables.cmake
doc/: process.md
lib/vst3sdk/: CMakeLists.txt
scripts/: format-check.cmake
src/: .clang-format  cli.hpp  main.cpp  vstk.cpp  vstk.hpp
src/audio/: audio_io.cpp  audio_io.hpp  sdl_audio.cpp  sdl_audio.hpp
src/automation/: automation.cpp  automation.hpp
src/commands/: command.cpp  command.hpp  gui_command.cpp  gui_command.hpp  inspect_command.cpp  inspect_command.hpp  instrument_command.cpp  instrument_command.hpp  parameters_command.cpp  parameters_command.hpp  process_command.cpp  process_command.hpp  scan_command.cpp  scan_command.hpp
src/ext/: args.hpp
src/host/: constants.hpp  minimal.cpp  minimal.hpp  module_loader.cpp  module_loader.hpp  parameter.cpp  parameter.hpp  vstk.cpp  vstk.hpp
src/instrumentation/: instrumentable_host.cpp  instrumentable_host.hpp  tracer_host.cpp  tracer_host.hpp  vst_operations.cpp  vst_operations.hpp
src/platform/: linux_platform.cpp  macos_platform.mm  platform_gui.hpp  windows_platform.cpp
src/util/: audio_utils.cpp  audio_utils.hpp  icon_utils.cpp  icon_utils.hpp  midi_file.cpp  midi_file.hpp  midi_utils.cpp  midi_utils.hpp  string_utils.cpp  string_utils.hpp  vst_discovery.cpp  vst_discovery.hpp
